package mcts_spacegame.model_mcts;

import lombok.SneakyThrows;
import mcts_spacegame.enums.Action;

import java.util.Collections;
import java.util.List;
import java.util.Set;

public class NodeWithNoChildrens extends NodeAbstract {  //todo TerminalLeaf

    public NodeWithNoChildrens(String name,Action action) {
        super(name,action);
    }

    @Override
    protected void nofOffSpringsRec(NodeInterface node, Counter counter) {
    }

    @Override
    @SneakyThrows
    public void addChildNode(NodeInterface node) {
        throw new NoSuchMethodException("Can't add child to node without child");
    }

    @Override
    public List<NodeInterface> getChildNodes() {
        return Collections.emptyList();
    }

    @Override
    public String getName() {
        return super.getName();
    }

    @Override
    public int nofChildNodes() {
        return 0;
    }

    @Override
    public int nofSubNodes() {
        return 0;
    }

    @Override
    public void printTree() {
        System.out.println(nameAndDepthAsString()+"(T)");
    }

    @Override
    public void increaseNofVisits() {

    }

    @Override
    public void increaseNofActionSelections(Action a) {

    }

    @Override
    public void updateActionValue(double G, Action a) {

    }

    @Override
    public int getNofVisits() {
        return 0;
    }

    @Override
    public int getNofActionSelections(Action a) {
        return 0;
    }

    @Override
    public double getActionValue(Action a) {
        return 0;
    }

    @Override
    public Set<Action> getActionSet() {
        return Collections.emptySet();
    }

    @SneakyThrows
    @Override
    public void expand(NodeInterface childNode, Action action) {
        throw new NoSuchMethodException("Can't expand node without child");
    }

    @Override
    public String toString() {
        return  "name = "+name+
                "nof childs = " + 0;
    }

}
